--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-router": "^1.112.13",
     "axios": "^1.8.1",
+    "chart.js": "^4.4.9",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-spinners": "^0.15.0",
